--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "escape-fractals",
+  "name": "@austeretriceratops/escape-fractals",
   "version": "0.1.0",
   "private": true,
   "homepage": ".",
@@ -8,9 +8,16 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "lodash": "^4.17.21",
+    "react-scripts": "5.0.1"
+  },
+  "devDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "three": "^0.147.0"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "three": "^0.147.0"
   },
   "scripts": {
