--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "austeretriceratops-escape-fractals",
   "version": "0.1.0",
-  "private": true,
   "homepage": ".",
   "main": "src/index.js",
-  "files": [ "src", "build", "tsconfig.json" ],
+  "files": [
+    "src",
+    "build",
+    "tsconfig.json"
+  ],
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
