--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "austeretriceratops-escape-fractals",
+  "homepage": "http://austeretriceratops.github.io/escape-fractals",
   "version": "0.1.0",
-  "homepage": ".",
   "main": "src/index.js",
   "files": [
     "src",
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.1"
   },
   "devDependencies": {
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.147.0"
@@ -29,6 +30,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
