--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "^0.147.0"
+    "three": "^0.147.0",
+    "typescript": "^4.9.5"
   },
   "peerDependencies": {
     "react": "^18.2.0",
